# jira2markdown

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
jira2markdown/: __init__.py  cli.py  elements.py  expressions.py  parser.py  tokens.py
jira2markdown/markup/: advanced.py  base.py  headings.py  images.py  links.py  lists.py  tables.py  text_breaks.py  text_effects.py
tests/markup/: test_advanced.py  test_elements.py  test_headings.py  test_images.py  test_links.py  test_lists.py  test_mixed_content.py  test_tables.py  test_text_breaks.py  test_text_effects.py
