[tool.poetry]
name = "jira2markdown"
version = "0.3.6"
description = "Convert text from JIRA markup to Markdown using parsing expression grammars"
license = "MIT"
authors = ["Evgeniy Krysanov <evgeniy.krysanov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/catcombo/jira2markdown"
packages = [
    { include = "jira2markdown" },
]
keywords = ["jira", "markdown"]
classifiers = [
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
pyparsing = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

black = "*"
flake8 = "*"
flake8-black = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-isort = "*"
flake8-quotes = "*"
isort = "*"

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
